Solved css bug related to horizontal spaces being not visible
Solved this bug -- but if anyone knows why it came please tell me 00.

--- a/public/stylesheets/board.css
+++ b/public/stylesheets/board.css
@@ -54,12 +54,13 @@ div {
 }
 
 .horizontal_spaces {
+  height: 18.6%;
   display: flex;
 }
 
 .horizontal_space {
   width: 12.5%;
-  height: 16.6%;
+  height: 89%;
 
   position: relative;
 
@@ -80,7 +81,7 @@ div {
 
 .corner_spaces {
   width: 14%;
-  height: 18.5%;
+  height: 100%;
 
   border-right: 0px;
 }
